2048/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    app: servicelabel
spec:
  type: LoadBalancer
  ports:
    - port: 7000
      protocol: TCP
      targetPort: 80
  selector:
    app: "2048"
